--- a/frontend/components/views/muscles/create/index.wxml
+++ b/frontend/components/views/muscles/create/index.wxml
@@ -1,4 +1,4 @@
-﻿<view class="page-container">
+<view class="page-container">
   <view class="main-container">
     <view class="page-header">
       <text class="page-title">Create Muscle</text>
